# dashboard-covid-19

./: .gitignore  app.py  poblacion.csv  pyproject.toml  requirements.txt
assets/: styles.css
