[project]
name = "dashboard-covid-19"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.1.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "pandas>=3.0.2",
    "requests-cache>=1.3.1",
]
